[metadata]
name = flops_wrapper
version = 0.8
summary = OpenMDAO component wrapper for FLOPS 
description-file = README.txt
keywords = openmdao
home-page = https://github.com/OpenMDAO-Plugins/flops_wrapper
download-url = 
author = Kenneth T. Moore
author-email = kenneth.t.moore-1@nasa.gov
maintainer = Kenneth T. Moore
maintainer-email = kenneth.t.moore-1@nasa.gov
license = Apache License, Version 2.0
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = 
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]
